--- a/html/thema/css/05.css
+++ b/html/thema/css/05.css
@@ -174,7 +174,7 @@
 .themaWrap .cont02 .listInfo li p::before { width: 14px; height: 14px; top: 0; } 
 .themaWrap .cont02 .listInfo li p { padding-left: 20px; margin-bottom: 0; margin-right: 6px; } 
 .themaWrap .cont02 .listInfo li span { font-size: 16px; } 
-.themaWrap .cont02 .mapBtn button::before { width: 12px; height: 17px; left: -16px; top: 0px; background-size: contain; } 
+.themaWrap .cont02 .mapBtn button::before { width: 12px; height: 17px; left: -16px; top: 0px; background-size: contain !important; } 
 .themaWrap .cont02 .listInfo li + li { margin-top: 4px; } 
 .themaWrap .cont03 .innerSection { padding: 30px 0; } 
 .themaWrap .cont03 .contTit .cTit01 img { max-width: 200px; } 
